bk_ida/gccida/c3/invalidate_skipped_set
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/invalidate_skipped_set/src/cse.c:7079:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+4h] [rbp-1Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/invalidate_skipped_set/src/cse.c:7094:33: error: use of undeclared identifier 'machine_mode'
invalidate( dest->fld[0].rtx, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)dest)); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/invalidate_skipped_set/src/cse.c:7094:48: error: expected expression
invalidate( dest->fld[0].rtx, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)dest)); 
                                               ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/invalidate_skipped_set/src/obj/cse.o] Error 1
